fix: adjust layout for navbar and social links, ensuring proper spacing and alignment

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -46,6 +46,7 @@
 /* GENERAL */
 html,
 body {
+	
   height: 100%;
   width: 100%;
   font-family: "Atkinson", sans-serif;
@@ -297,7 +298,6 @@ hr {
   #nav-footer {
     display: grid;
     grid-auto-flow: column;
-    gap: 0;
   }
 
   #nav-list li {
@@ -315,9 +315,23 @@ hr {
     padding-bottom: 0;
   }
 
+	#linkdin-links {
+		margin-right: 20px;
+	}
+	.nav-social-links > a {
+		margin-right: 20px;
+	}
+
   #lang-toggle {
-    margin-left: 10px;
+    margin-left: 20px;
+		display: flex;
+		align-items: center;
   }
+
+	#lang-toggle a {
+		display: flex;
+		align-items: center;
+}
 
   #nav-list.hidden {
     opacity: 1 !important;
